deploy/isolation-example/apps/whoami/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: isolation-example
  name: whoami
spec:
  type: LoadBalancer
  selector:
    app: whoami
  ports:
    - name: http-gateway
      port: 40100
      targetPort: 80
      protocol: TCP
      appProtocol: HTTP
