deploy/isolation-example/apps/whoami/network-policy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: isolation-example
  name: whoami
spec:
  podSelector:
    matchLabels:
      app: whoami
  policyTypes:
    - Ingress
    - Egress
  egress: [] # оставляем пустым, запрещая контейнеру куда-либо ходить
